--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -5,4 +5,6 @@ WORKDIR /front
 COPY package.json package.json
 RUN npm install --legacy-peer-deps
 COPY . .
-CMD ["npm", "start"]
+RUN npm run build
+RUN echo "serve -s build -l $PORT" > start.sh
+CMD ["/bin/bash", "start.sh"]
