--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-scripts-ts": "^3.1.0",
+    "serve": "^14.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
